--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,12 @@
     padding: 1.5em 1em;
     margin: auto auto;
     border-radius: 10px 10px 0 0;
-    color: white;
     border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+#header > a {
+  color: white !important;
+  text-decoration: none;
 }
 
 body {
@@ -46,7 +50,7 @@ footer {
   background-color: #007fff;
   text-align: center;
   padding: 1em;
-  color: white;
+  color: green;
   font-family: 'Lato Light', serif;
   border-radius: 0 0 10px 10px;
 }
