added logo image, dummy pages, css

--- a/css/accounts/design.css
+++ b/css/accounts/design.css
@@ -41,6 +41,11 @@
     margin-bottom: 2rem;
 }
 
+.account input[type="submit"]
+{
+
+}
+
 /**********************************/
 /*********   Id'd stuff   *********/
 /**********************************/
