--- a/css/common/design.css
+++ b/css/common/design.css
@@ -16,11 +16,13 @@
     border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-
-
-#header a {
-    color: white;
+body > * a {
     text-decoration: none;
+    
+}
+
+footer a, #header a {
+    color: white;
 }
 
 body {
@@ -33,29 +35,33 @@ body {
     border: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-ul li {
-    font-family: Ubuntu, sans-serif;
-    list-style: none;
-}
-
-ul li a {
-    color: darkblue;
-    text-decoration: none;
-}
-
 footer {
     text-align: center;
     border-radius: 0 0 10px 10px;
 }
 
-.display_username
+#display_username
 {
     color: white;
-    font-size: 2rem;
-    text-align: center;
+    text-align: right;
 }
 
 .error_message 
 {
     color: red;
+}
+
+ul li, #display_username {
+    list-style: none;
+    font-family: Ubuntu, sans-serif;
+}
+
+#accounts_bar li, footer a
+{
+    border-left: 1px solid;
+}
+
+#accounts_bar > li:first-child
+{
+    border: none;
 }
