--- a/css/common/layout.css
+++ b/css/common/layout.css
@@ -1,7 +1,7 @@
 #header {
     text-align: center;
     padding: 1.5em 1em;
-    margin: auto auto;
+    
 }
 
 body {
@@ -13,22 +13,37 @@ body {
     padding: 5em;
 }
 
-ul li {
-    margin: 1em auto;
+#accounts_bar
+{
+    display: flex;
+    justify-content: flex-end;
+}
+
+#title, footer
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#title h1 
+{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+#accounts_bar li, footer *, #display_username
+{   
+    padding-right: 1rem;
+    padding-left: 1rem;
 }
 
 footer {
     padding: 1em;
 }
 
-/************ added by Igor ***********/
-.delete-button {
-    float: right;
-    margin-top: -13px;
-    font-size: 11px;
-    display: none;
-}
-
-li:hover .delete-button {
-    display: block;
+#logo_image
+{
+    width: 3rem;
+    margin-right: 1rem;
 }
