--- a/css/accounts/design.css
+++ b/css/accounts/design.css
@@ -19,7 +19,7 @@
 {
     border: 0px;
     background-color: white;
-    
+    border-radius: 3px;
 }
 
 .account form span 
@@ -43,7 +43,18 @@
 
 .account input[type="submit"]
 {
+    transition: background-color 0.3s;
+}
 
+.account input[type="submit"]:hover
+{
+    background-color: #DDD;
+}
+
+.account input[type="submit"]:active
+{
+    background-color: #AAA;
+    box-shadow: 0 0 0.5rem #444;
 }
 
 /**********************************/
