--- a/css/common/design.css
+++ b/css/common/design.css
@@ -46,6 +46,11 @@ footer {
     text-align: right;
 }
 
+.error_message_invisible
+{
+    display: none;   
+}
+
 .error_message 
 {
     color: red;
