--- a/css/accounts/design.css
+++ b/css/accounts/design.css
@@ -49,6 +49,14 @@
     box-shadow: 0 0 0.5rem #444;
 }
 
+/* instructions */
+.account h3		
+{		
+    text-align: justify;		
+    color: white;		
+    font-size: 1.2rem;		
+    margin-bottom: 2rem;		
+}
 .error_message 
 {
     padding: 1rem 0.5rem ;
@@ -57,6 +65,7 @@
     border-radius: 5px;
     font-weight: bold;
 }
+
 
 /**********************************/
 /*********   Id'd stuff   *********/
