--- a/css/common/design.css
+++ b/css/common/design.css
@@ -46,19 +46,14 @@ footer {
     text-align: right;
 }
 
-.error_message_invisible, .success_message_invisible
+.error_message_invisible
 {
     display: none;   
 }
 
-.error_message
+.error_message 
 {
     color: red;
-}
-
-.success_message
-{
-    color: green;   
 }
 
 ul li, #display_username {
