--- a/css/common/layout.css
+++ b/css/common/layout.css
@@ -1,12 +1,18 @@
+#container {
+    background-image: url("../images/paper.jpg");
+    margin: 0px auto;
+}
+
+
+
 #header {
     text-align: center;
     padding: 1.5em 1em;
-    
 }
 
 body {
-    width: 80%;
     margin: 1em auto;
+    width: 95%;
 }
 
 #body-section {
@@ -24,6 +30,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 42px;
 }
 
 #title h1 
@@ -45,5 +52,9 @@ footer {
 #logo_image
 {
     width: 3rem;
-    margin-right: 1rem;
+    margin-right: auto;
+    margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
+
 }
