--- a/css/main/layout.css
+++ b/css/main/layout.css
@@ -37,6 +37,27 @@
     padding-right: 1rem;
 }
 
+.container
+{
+    position: relative;
+    text-align: center;
+    color: black;
+}
+
+.centered
+{
+    margin-top: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.centered p
+{
+    padding: 20px;
+}
+
 /**********************************/
 /*********   Id'd stuff   *********/
 /**********************************/
