--- a/css/main/design.css
+++ b/css/main/design.css
@@ -1,128 +1,4 @@
-
-.account
-{
-    background-color: rgb(238, 136, 89);
-    border-radius: 10px;
-    font-family: sans-serif;
-}
-
-.account h1 
-{
-    font-size: 2.5rem;
-    color: white;
-    font-weight: 900;
-}
-
-
-.account form input
-{
-    border: 0px;
-    background-color: white;
-    border-radius: 3px;
-}
-
-.account form span 
-{
-    color: white;
-}
-
-.account input[type="submit"], .account form span
-{
-    font-weight: 600;
-    font-size: 1.2rem;
-}
-
-.account input[type="submit"]
-{
-    transition: background-color 0.3s;
-}
-
-.account input[type="submit"]:hover
-{
-    background-color: #DDD;
-}
-
-.account input[type="submit"]:active
-{
-    background-color: #AAA;
-    box-shadow: 0 0 0.5rem #444;
-}
-
-/* instructions */
-.account h3		
-{		
-    text-align: justify;		
-    color: white;		
-    font-size: 1.2rem;		
-    margin-bottom: 2rem;		
-}
-.error_message 
-{
-    padding: 1rem 0.5rem ;
-    color: rgb(255, 0, 0);
-    background-color: rgb(250, 195, 195);
-    border-radius: 5px;
-    font-weight: bold;
-}
-
-.container img
-{
-    border-radius: 5px;
-}
-
-.centered p
-{
-    font-style: "Comic Sans MS", "Times New Roman", sans-serif;
-    font-size: 110%;
-}
-
-
-/**********************************/
-/*********   Id'd stuff   *********/
-/**********************************/
-
-
-#slogan
-{
-    font-size: 150%;
-}
-
-
-#old_password 
-{
-    margin-top: 4rem;
-    margin-bottom: 1rem;
-}
-
-#user_p
-{
-    color: white;
-    font-size: 3rem;
-    font-weight: 900;
-    text-align: center;
-}
-
-#edit_account h1 
-{
-    font-size: 2rem;
-    font-weight: 700;
-}
-
-#text h2
-{
-    font-size: 100%;
-}
-
-#text
-{
-    color: #ffffff;
-    padding: 10px;
-    width: 100%;
-    border-radius: 10px;
-
-    background: #77a6f7; /* For browsers that do not support gradients */
-    background: -webkit-radial-gradient(circle, #77a6f7, #77a6f7, white); /* Safari */
-    background: -o-radial-gradient(circle, #77a6f7, #77a6f7, white); /* Opera 11.6 to 12.0 */
-    background: -moz-radial-gradient(circle, #77a6f7, #77a6f7, white); /* Firefox 3.6 to 15 */
-    background: radial-gradient(circle, #77a6f7, #77a6f7, white); /* Standard syntax */
+#landing {
+  background-image: url("../../images/main_image_2.jpg");
+  background-size: cover;
 }
