--- a/css/main/layout.css
+++ b/css/main/layout.css
@@ -1,83 +1,1 @@
-
-.account 
-{
-    margin: auto auto;
-    padding: 2rem 3rem;
-}
-
-.account , .account > form, .account > form label
-{
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 1rem;
-}
-
-.account > form label input, .account input[type="submit"]
-{
-    margin-top: 1rem;
-}
-
-.account form 
-{
-    padding-bottom: 0;
-}
-
-.account input[type="submit"]
-{
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-    height: 3rem;
-}
-
-.account form input 
-{
-    height: 2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-.container
-{
-    position: relative;
-    text-align: center;
-    color: black;
-}
-
-.centered
-{
-    margin-top: 200px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.centered p
-{
-    padding: 20px;
-}
-
-/**********************************/
-/*********   Id'd stuff   *********/
-/**********************************/
-
-#login 
-{
-    padding-bottom: 3rem;
-}
-
-#register, #edit_account
-{
-    padding-bottom: 3rem;
-}
-
-#edit_account, #register
-{
-    width: 20rem;
-}
-
-#login 
-{
-    width: 16rem;
-}
+/* Main Page CSS */
