--- a/css/common/layout.css
+++ b/css/common/layout.css
@@ -1,60 +1,142 @@
-#container {
-    background-image: url("../images/paper.jpg");
-    margin: 0px auto;
+/* Common CSS */
+* {
+  margin: 0;
+  padding: 0;
 }
-
-
 
 #header {
-    text-align: center;
-    padding: 1.5em 1em;
-}
-
-body {
-    margin: 1em auto;
-    width: 95%;
+  padding: 0.5em 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-height: 100px;
 }
 
 #body-section {
-    padding: 5em;
-}
-
-#accounts_bar
-{
-    display: flex;
-    justify-content: flex-end;
-}
-
-#title, footer
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 42px;
-}
-
-#title h1 
-{
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-#accounts_bar li, footer *, #display_username
-{   
-    padding-right: 1rem;
-    padding-left: 1rem;
+  min-height: 100vh;
 }
 
 footer {
-    padding: 1em;
+  padding: 1em;
 }
 
-#logo_image
-{
-    width: 3rem;
-    margin-right: auto;
-    margin-right: auto;
-    max-width: 100%;
-    max-height: 100%;
+#logo img {
+  width: 3rem;
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
+  margin-bottom: 0.2em;
+}
 
+#logged-out {
+  display: flex;
+  flex-direction: row;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content p {
+  margin: 0;
+  padding: 0.5em 0;
+  padding-left: 5px;
+  border-radius: 5px;
+}
+
+.dropdown-content {
+  text-align: left;
+  visibility: hidden;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  transform: translateY(-2em);
+  z-index: -1;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+}
+
+.dropdown:hover .dropdown-content {
+  visibility: visible; /* shows sub-menu */
+  opacity: 1;
+  z-index: 1;
+  transform: translateY(0%);
+  transition-delay: 0s, 0s, 0.3s;
+}
+
+.wrapper {
+    position: relative;
+}
+
+.inner {
+  position: absolute;
+  height: 50px;
+  width: 300px;
+  left: 50%;
+  top: 50%;
+  margin-top: -25px; /* Half Of Height */
+}
+
+.jumbotron {
+  padding-top: 3em;
+  padding-left: 2.5em;
+}
+
+.jumbotron h2 {
+  margin: 1em auto;
+}
+
+.inline-buttons {
+  margin-top: 10vh;
+  display: inline-block;
+}
+
+.blurbs {
+  text-align: center;
+  margin: 75px auto;
+}
+
+.blurbs h1 {
+  margin-bottom: 2em;
+}
+
+.blurbs span.fa {
+  margin-bottom: 30px;
+}
+
+.blurbs:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.blurbs-4 .blurb{
+  float: left;
+  width: 25%;
+}
+
+.blurbs-3 .blurb{
+  float: left;
+  width: 33%;
+}
+
+.blurbs-3 .blurb:last-of-type{
+  width: auto;
+}
+
+input {
+  transition: letter-spacing 0.2s ease;
+  padding: 10px;
+  padding-bottom: 3px;
+  padding-left: 3px;
+  font-size: 20px;
+}
+
+input:hover{
+  letter-spacing: 1px;
+}
+
+::-webkit-input-placeholder {
+  color: black;
 }
