--- a/css/lists/design.css
+++ b/css/lists/design.css
@@ -1,66 +1,9 @@
-
-/* devia tar associado a id ou classe **/
-ul li a {
-    color: darkblue;
-    text-decoration: none;
+/* Lists CSS */
+#body-section {
+  background-image: url("../../images/single_list.jpg");
+  background-size: cover;
 }
-
-form.edit-form h3 {
-  font-size: 2rem;
-  color: white;
-  font-weight: 900;
-}
-
-form.edit-form {
-  background-color: #bfbfbf;
-  border-radius: 10px;
-  font-family: sans-serif;
-}
-
-form.edit-form input
-{
-    border: 0px;
-    background-color: white;
-    border-radius: 3px;
-}
-
-form.edit-form span
-{
-    color: white;
-}
-
-form.edit-form input[type="submit"],
-form.edit-form button.add-btn,
-form.edit-form span
-{
-    font-weight: 600;
-    font-size: 1.2rem;
-}
-
-form.edit-form input[type="submit"],
-form.edit-form button.add-btn
-{
-    transition: background-color 0.3s;
-}
-
-form.edit-form input[type="submit"]:hover
-{
-    background-color: #DDD;
-}
-
-form.edit-form button.add-btn {
-  background-color: #27a8f7;
-}
-
-form.edit-form input[type="submit"]:active
-{
-    background-color: #AAA;
-    box-shadow: 0 0 0.5rem #444;
-}
-
-.error_message
-{
-    padding: 1rem 0.5rem ;
+.error_message {
     color: rgb(255, 0, 0);
     background-color: rgb(250, 195, 195);
     border-radius: 5px;
@@ -68,21 +11,16 @@ form.edit-form input[type="submit"]:active
 }
 
 .loader {
-  display:none;
-  position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
-    width: 100px;
-    height: 100px;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+}
+
+.delete-button {
+    font-size: 11px;
+    display: none;
 }
 
 @-webkit-keyframes spin {
@@ -93,4 +31,41 @@ form.edit-form input[type="submit"]:active
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+#main_info {
+  padding: 1em 0.5em;
+  padding-right:  100px;
+  background-color: rgba(255, 255, 255, 0.85);
+  border-radius: 10px;
+}
+
+#image {
+  margin-left: -90px;
+}
+
+.list {
+  background-color: rgba(255, 255, 255, 0.85);
+  padding: 1em 0;
+}
+
+#items_list {
+  border-radius: 5px 0 0 5px;
+  border-right: solid 1px grey;
+  border-right-width: thin;
+  border-right-style: dashed;
+}
+
+#users_list {
+  border-radius: 0 5px 5px 0;
+}
+
+.white-back {
+  background-color: rgba(255, 255, 255, 0.85);
+  border-radius: 5px;
+  padding: 1.5em;
+}
+
+.white-back > * {
+  margin-top: 1em;
 }
