--- a/css/accounts/design.css
+++ b/css/accounts/design.css
@@ -1,3 +1,5 @@
+/* Accounts CSS */
+
 #login-page {
   background-image: url("../../images/login.jpg");
   background-size: cover;
@@ -13,10 +15,6 @@
   padding: 2em;
   text-align: center;
   border-radius: 10px;
-}
-
-.account *:not(h1) {
-  margin-top: 0.8em;
 }
 
 #login:hover {
