--- a/css/about/layout.css
+++ b/css/about/layout.css
@@ -1,22 +1,17 @@
+.centered {
+  top: 10vh !important;
+}
+
 .feup_logo {
-
-margin-right: 2em;
-margin-left: 2em;
-margin-top: 0px;
-
+  margin-top: -20px;
 }
 
-.intro {
-
-  text-align: center;
-  margin-bottom: 10em;
-
+ul.authors {
+  width: 50%;
+  padding: 1em 2em;
+  margin:auto;
 }
 
-.authors {
-
-  text-align: center;
-  border: 20px blue;
-  margin-bottom: -2em;
-
+.authors li {
+  padding: 5px;
 }
