--- a/css/about/layout.css
+++ b/css/about/layout.css
@@ -2,8 +2,20 @@
   top: 10vh !important;
 }
 
-.feup_logo {
+#inside_about {
+  display: flex;
+  flex-direction: column;
+}
+
+#about_div {
+  height: 120vh;
+}
+
+#feup_logo {
+  margin: auto;
   margin-top: -20px;
+  max-width: 60%;
+  height: auto;
 }
 
 ul.authors {
