--- a/css/common/design.css
+++ b/css/common/design.css
@@ -183,7 +183,9 @@ ul li {
 }
 
 .delete {
+  transition: border-radius 0.5s ease;
   background-color: rgba(199, 0, 0, 1) !important;
+  border-radius: 50%;
 }
 
 .delete:hover {
